Us250350 pfe-cta wrapping issues (#791)
* Adjustments to CTA width
* Addition of centering for primary style buttons that has long wrapping text
* Adjust demo file to prevent focus state issue from appearing on default cta

--- a/elements/pfe-cta/demo/demo.css
+++ b/elements/pfe-cta/demo/demo.css
@@ -18,12 +18,10 @@ pfe-band[pfe-color="lightest"] pfe-card[pfe-color="lightest"] {
 }
 
 .resize {
-  display: flex;
-  flex-flow: row nowrap;
   resize: horizontal;
   overflow: auto;
   border: 1px solid #ddd;
-  width: 500px;
+  width: 700px;
   padding: 10px;
 }
 
