--- a/elements/pfe-cta/src/pfe-cta.scss
+++ b/elements/pfe-cta/src/pfe-cta.scss
@@ -42,7 +42,6 @@ $variables: (
   display: inline-block;
   position: relative;
   z-index: 0;
-  max-width: max-content;
   vertical-align: middle;
   transition: padding #{pfe-var(animation-speed)} #{pfe-var(animation-timing)};
 
@@ -118,6 +117,10 @@ $variables: (
     color: #{pfe-local(Color--hover)} !important;
     text-decoration: #{pfe-local(TextDecoration--hover)} !important;
   }
+
+  :host([pfe-priority]) & {
+    text-align: center;
+  }
 }
 
 :host(:not([aria-disabled="true"])) ::slotted(*:not(:disabled)),
@@ -133,6 +136,7 @@ $variables: (
   &--wrapper {
     display: block; 
     white-space: nowrap;
+    min-width: 100%;
 
     :host([pfe-priority]) &,
     :host([aria-disabled="true"]) & {
